# stm32f439zi_no_std_app

./: Cargo.toml  memory.x  openocd.cfg  rust-toolchain.toml  shell.nix
.cargo/: config.toml
examples/: hardfault_exception.rs  hello.rs  systick_exception_cnt.rs
