[package]
authors = ["Harry Chen <baffen227@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f439zi_no_std_app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f439", "defmt", ]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f439zi_no_std_app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
